<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.view.GraphViewActivity"
    android:background="@color/dark_gray"
    >
    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="@dimen/graph_height"

        android:layout_margin="@dimen/graph_margin"
        android:background="@color/white"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_trigs"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/layout_trigs_margin"
        android:layout_marginTop="@dimen/layout_trigs_marginTop"

        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph">

        <RadioGroup
            android:id="@+id/rg_trig_func"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_sine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/sine" />

            <RadioButton
                android:id="@+id/rb_cosine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/cosine" />

            <RadioButton
                android:id="@+id/rb_tang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/tangent" />


        </RadioGroup>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_amplitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/tv_amplitude_text"
            android:inputType="number"


            app:layout_constraintBottom_toTopOf="@+id/tv_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rg_trig_func"
            app:layout_constraintTop_toTopOf="@+id/rg_trig_func" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/tv_value_text"
            android:inputType="number"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rg_trig_func"
            app:layout_constraintTop_toBottomOf="@+id/tv_amplitude" />

        <TextView
            android:id="@+id/txt_multiple_graphs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/enable_multiple_graphs"
            android:layout_margin="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_trig_func" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_enable_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/switch_marginBottom"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/txt_multiple_graphs"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/light_blue"
        android:padding="@dimen/btn_draw_padding"
        android:text="@string/btn_draw_text"

        app:layout_constraintTop_toBottomOf="@+id/layout_trigs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>