<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ui.main.view.NewRoomActivity">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="@dimen/tv_header_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tv_header_margin"

        android:text="@string/tv_header_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_header_textSize"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_roomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/et_roomName_margin"
        android:padding="@dimen/lbl_padding"

        android:text="Room name: "
        android:textColor="@color/white"
        android:textSize="@dimen/lbl_textSize"

        app:layout_constraintEnd_toStartOf="@+id/et_RoomName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_RoomName"
        android:layout_width="@dimen/et_RoomName_width"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/et_roomName_margin"

        android:background="@color/light_blue"

        android:textSize="@dimen/et_RoomName_textSize"
        android:hint="@string/et_roomName_hint"
        android:padding="@dimen/et_roomName_padding"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_roomName"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />


    <TextView
        android:id="@+id/lbl_roomLighting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/et_roomLighting_margin"
        android:padding="@dimen/lbl_padding"

        android:text="Room lighting: "
        android:textColor="@color/white"
        android:textSize="@dimen/lbl_textSize"

        app:layout_constraintEnd_toStartOf="@+id/tv_RoomLighting"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_roomName" />

    <TextView
        android:id="@+id/tv_RoomLighting"
        android:layout_width="@dimen/tv_RoomLighting_width"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/et_roomLighting_margin"
        android:padding="@dimen/et_roomLighting_padding"

        android:background="@color/light_blue"
        android:textSize="@dimen/tv_RoomLighting_textSize"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lbl_roomLighting"
        app:layout_constraintTop_toBottomOf="@id/et_RoomName" />


    <Button
        android:id="@+id/btn_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/btn_commit_maeginHorizontal"
        android:layout_marginTop="@dimen/b_commit_marginTop"


        android:backgroundTint="@color/light_blue"

        android:text="@string/b_commit_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_RoomLighting" />

</androidx.constraintlayout.widget.ConstraintLayout>